fix mobile overflow issue

--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -31,3 +31,6 @@ body {
 .c-content {
     color: white;
 }
+.gatsby-focus-wrapper {
+    overflow: hidden;
+}
